--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.2.5",
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
@@ -16,7 +20,8 @@
     "react-scripts": "5.0.1",
     "reactronica": "^0.7.0",
     "styled-components": "^5.3.11",
-    "tone": "^14.7.77"
+    "tone": "^14.7.77",
+    "typescript": "^5.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
